--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@nestjs/jwt": "10.0.3",
     "@nestjs/passport": "9.0.3",
     "@nestjs/platform-express": "9.4.0",
-    "@nestjs/swagger": "6.3.0",
+    "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "9.0.1",
     "@types/multer-s3": "^3.0.0",
     "apple-signin-auth": "1.7.5",
@@ -60,6 +60,7 @@
     "rimraf": "5.0.0",
     "rxjs": "7.8.1",
     "source-map-support": "0.5.21",
+    "swagger-ui-dist": "^4.18.3",
     "swagger-ui-express": "4.6.2",
     "twitter": "1.7.1",
     "typeorm": "0.3.15"
