--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   async: ^2.9.0
   equatable: ^2.0.5
   lottie: ^2.3.2
+  freezed_annotation: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +64,7 @@ dev_dependencies:
   build_runner: ^2.3.3
   flutter_flavorizr: ^2.1.5
   flutter_gen_runner: ^5.2.0
+  freezed: ^2.3.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
