--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -137,6 +137,14 @@ flutter:
           weight: 500
         - asset: assets/fonts/Mulish-Bold.ttf
           weight: 700
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Poppins-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Poppins-Bold.ttf
+          weight: 700
 
 flutter_gen:
   output: lib/generated/
