--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,22 +1,32 @@
 {
-  "name": "blood-donation",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "18.16.3",
-    "@types/react": "18.2.5",
-    "@types/react-dom": "18.2.3",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.4.0",
-    "next": "13.4.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.0.4"
-  }
+	"name": "backend_admin_by_react",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@metaplex/js": "^4.12.0",
+		"@solana/wallet-adapter-phantom": "^0.9.6",
+		"@solana/web3.js": "^1.47.3",
+		"@heroicons/react": "^2.0.17",
+		"next": "^13.4.1",
+		"rc-table": "^7.32.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-js-pagination": "^3.0.2",
+		"react-pure-modal": "^2.2.0",
+		"react-transition-group": "^4.4.5",
+		"axios": "^0.27.2"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.2",
+		"eslint": "8.10.0",
+		"eslint-config-next": "^13.4.1",
+		"postcss": "^8.4.8",
+		"tailwindcss": "^3.0.23"
+	}
 }
