--- a/mobile/.vscode/settings.json
+++ b/mobile/.vscode/settings.json
@@ -7,5 +7,8 @@
   // Remove from file watching
   "files.watcherExclude": {
     "**/.fvm": true
-  }
+  },
+  "editor.formatOnSave": true,
+  "editor.formatOnType": true,
+  "docwriter.hotkey.mac": "⌥ + ."
 }
