--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   carousel_slider: ^4.2.1
   flutter_screenutil: 5.7.0
   dropdown_button2: ^2.1.3
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
@@ -122,6 +123,7 @@ flutter:
     - assets/icons/launcher/
     - assets/icons/profile/
     - assets/icons/request/
+    - assets/icons/notification/
     - assets/locales/
     - assets/images/
     - assets/images/lottie/
