--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -35,6 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  # For google map and location
+  google_maps_flutter: ^2.2.6
+  google_maps_flutter_platform_interface: ^2.2.6
+  google_maps_flutter_android: ^2.4.6
+  permission_handler: ^10.2.0
+  geolocator: ^9.0.2
+
+  #
   injectable: ^2.1.0
   json_annotation: ^4.8.0
   get_it: ^7.2.0
