--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -60,7 +60,7 @@ dependencies:
   carousel_slider: ^4.2.1
   flutter_screenutil: 5.7.0
   dropdown_button2: ^2.1.3
-  intl: ^0.17.0
+  intl: 0.18.1
 
 dev_dependencies:
   flutter_test:
