[Feat] Create Login, Finish, Forgot Password Screen

--- a/mobile/.vscode/settings.json
+++ b/mobile/.vscode/settings.json
@@ -10,5 +10,8 @@
   },
   "editor.formatOnSave": true,
   "editor.formatOnType": true,
-  "docwriter.hotkey.mac": "⌥ + ."
+  "docwriter.hotkey.mac": "⌥ + .",
+  "cSpell.words": [
+    "bloodbond"
+  ]
 }
