[Feat] Fix comment

--- a/mobile/.vscode/settings.json
+++ b/mobile/.vscode/settings.json
@@ -12,6 +12,7 @@
   "editor.formatOnType": true,
   "docwriter.hotkey.mac": "⌥ + .",
   "cSpell.words": [
-    "bloodbond"
+    "bloodbond",
+    "dont"
   ]
 }
