feat(db): migration + entity + seed

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,6 +17,13 @@ TYPEORM_USERNAME=
 TYPEORM_PASSWORD=
 TYPEORM_DATABASE=
 
+# Supabase config
+TYPEORM_HOST=
+TYPEORM_PORT=
+TYPEORM_USERNAME=
+TYPEORM_PASSWORD=
+TYPEORM_DATABASE=
+
 # Google OAuth2
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
