--- a/backend/tsconfig.build.json
+++ b/backend/tsconfig.build.json
@@ -1,11 +1,11 @@
 {
   "extends": "./tsconfig.json",
   "exclude": [
-    "node_modules", 
-    "test", 
-    "dist", 
+    "node_modules",
+    "test",
+    "dist",
     "**/*spec.ts",
     "logs",
-    "src/database",
-  ]  
+    "src/database"
+  ]
 }
