--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ aliases:
     - &install-deps
       run:
           name: Install dependencies
-          command: cd ~/bloodbond/backend && npm i
+          command: npm i
 
 orbs:
     node: circleci/node@5.0.1
@@ -45,7 +45,7 @@ jobs:
                   name: Deploy via ssh
                   command: |
                       echo Starting deploy to server
-                      ssh -oStrictHostKeyChecking=no -v $SSH_USER@$SSH_HOST 'cd ~/bloodbond/backend && git checkout develop && git pull && chmod 777 ./script/deploy.sh && ./script/deploy.sh'
+                      ssh -oStrictHostKeyChecking=no -v $SSH_USER@$SSH_HOST 'cd bloodbond/backend && git checkout develop && git pull && chmod 777 ./script/deploy.sh && ./script/deploy.sh'
 
 workflows:
     build-and-deploy:
