--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ aliases:
     - &install-deps
       run:
           name: Install dependencies
-          command: npm i
+          command: npm i --fronzen-lockfile
 
 orbs:
     node: circleci/node@5.0.1
@@ -34,9 +34,7 @@ jobs:
             - run:
                   name: Update NPM version
                   command: 'sudo npm install -g npm@latest'
-            - run:
-                  name: Install dependencies
-                  command: npm install
+            - *install-deps
             - save_cache:
                   key: v1-dependencies-{{ checksum "package.json" }}
                   paths:
@@ -68,7 +66,7 @@ jobs:
                   name: Deploy via ssh
                   command: |
                       echo Starting deploy to server
-                      ssh -oStrictHostKeyChecking=no -v $SSH_USER@$SSH_HOST 'cd bloodbond/backend && git checkout develop && git pull && chmod 777 ./script/deploy.sh && ./script/deploy.sh'
+                      ssh -oStrictHostKeyChecking=no -v $SSH_USER@$SSH_HOST 'cd ~/bloodbond/backend && git checkout develop && git pull && chmod 777 ./script/deploy.sh && ./script/deploy.sh'
 
 workflows:
     build-and-deploy:
