--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
         environment:
             DOCKER_IMAGE: high10hunter/node
             DOCKER_TAG: latest
-        working_directory: bloodbond/backend
+        working_directory: /home/high10hunter/bloodbond/backend
         docker:
             - image: circleci/node:16
             - image: docker:19.03.14
@@ -58,7 +58,7 @@ jobs:
     deploy:
         machine:
             enabled: true
-        working_directory: bloodbond/backend
+        working_directory: /home/high10hunter/bloodbond/backend
         steps:
             - add_ssh_keys:
                   fingerprints: '09:03:4f:fb:dd:07:f0:0a:85:79:1f:48:ab:66:96:62'
@@ -66,7 +66,7 @@ jobs:
                   name: Deploy via ssh
                   command: |
                       echo Starting deploy to server
-                      ssh -oStrictHostKeyChecking=no -v $SSH_USER@$SSH_HOST 'cd bloodbond/backend && git checkout develop && git pull && chmod 777 ./script/deploy.sh && ./script/deploy.sh'
+                      ssh -oStrictHostKeyChecking=no -v $SSH_USER@$SSH_HOST 'cd ~/bloodbond/backend && git checkout develop && git pull && chmod 777 ./script/deploy.sh && ./script/deploy.sh'
 
 workflows:
     build-and-deploy:
