--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ aliases:
     - &install-deps
       run:
           name: Install dependencies
-          command: npm i --fronzen-lockfile
+          command: sudo su high10hunter && npm i --fronzen-lockfile
 
 orbs:
     node: circleci/node@5.0.1
@@ -20,7 +20,7 @@ jobs:
         environment:
             DOCKER_IMAGE: high10hunter/node
             DOCKER_TAG: latest
-        working_directory: /home/high10hunter/bloodbond/backend
+        working_directory: ~/bloodbond/backend
         docker:
             - image: circleci/node:16
             - image: docker:19.03.14
@@ -58,7 +58,7 @@ jobs:
     deploy:
         machine:
             enabled: true
-        working_directory: /home/high10hunter/bloodbond/backend
+        working_directory: ~/bloodbond/backend
         steps:
             - add_ssh_keys:
                   fingerprints: '09:03:4f:fb:dd:07:f0:0a:85:79:1f:48:ab:66:96:62'
