--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ aliases:
     - &install-deps
       run:
           name: Install dependencies
-          command: whoami && npm i --fronzen-lockfile
+          command: npm i --fronzen-lockfile
 
 orbs:
     node: circleci/node@5.0.1
