--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,25 +1,8 @@
 version: '3.3'
 services:
-  db:
+  app:
     restart: on-failure
-    container_name: nest-boilerplate-pg
-    image: postgres
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=boilerplate
+    container_name: bloodbond
+    image: high10hunter/node:latest
     ports:
-      - "5432:5432"
-    expose:
-      - 5432
-    volumes:
-      - ./db:/var/lib/postgresql/data
-      
-  # redis:
-  #   container_name: redis
-  #   restart: on-failure
-  #   image: redis
-  #   ports:
-  #   - '6379:6379'
-  #   expose:
-  #     - 6379
+      - '3000:3000'
