--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ aliases:
     - &install-deps
       run:
           name: Install dependencies
-          command: cd backend && npm i --fronzen-lockfile
+          command: npm i --fronzen-lockfile
 
 orbs:
     node: circleci/node@5.0.1
@@ -23,7 +23,7 @@ jobs:
         docker:
             - image: circleci/node:16
             - image: docker:19.03.14
-        working_directory: ~/bloodbond
+        working_directory: ~/bloodbond/backend
         steps:
             - checkout
             - setup_remote_docker
