--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,8 @@ jobs:
             - image: docker:19.03.14
         working_directory: ~/bloodbond/backend
         steps:
-            - checkout
-                path: ~/bloodbond
+            - checkout:
+                  path: ~/bloodbond
             - setup_remote_docker
             - *restore-cache
             - run: npm cache clear --force
