change merge strategy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ jobs:
                   name: Deploy via ssh
                   command: |
                       echo Starting deploy to server
-                      ssh -oStrictHostKeyChecking=no -v $SSH_USER@$SSH_HOST 'cd ~/bloodbond/backend && git checkout develop && git pull && chmod 777 ./script/deploy.sh && ./script/deploy.sh'
+                      ssh -oStrictHostKeyChecking=no -v $SSH_USER@$SSH_HOST 'cd ~/bloodbond/backend && git checkout develop && git fetch origin && git reset --hard origin/develop && chmod 777 ./script/deploy.sh && ./script/deploy.sh'
 
 workflows:
     build-and-deploy:
