--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,7 @@ FROM node:16
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
-COPY . .
+COPY backend .
 RUN npm run build
 EXPOSE 3000
 CMD ["npm", "run", "start:prod"]
