fix: add env variables

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,9 @@ orbs:
 
 jobs:
     build:
+        environment:
+            DOCKER_IMAGE: high10hunter/node
+            DOCKER_TAG: latest
         docker:
             - image: circleci/node:16
             - image: docker:19.03.14
