feat: discord bot log error

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -29,3 +29,22 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=
 
+# Cloudinary
+CLOUDINARY_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+
+# Local Storage
+STORAGE_TYPE=
+LOCAL_STORAGE_PATH=
+LIMIT_FILE_UPLOAD=
+MAX_FILE_SIZE=
+
+# Sentry
+SENTRY_DSN=
+
+# Discord bot
+DISCORD_WEBHOOK=
+DISCORD_BOT_NAME=
+DISCORD_BOT_AVATAR_URL=
+
