--- a/mobile/config.json
+++ b/mobile/config.json
@@ -1,7 +1,7 @@
 {
-  "BASE_URL": "",
-  "API_KEY": "",
-  "NETWORK": "",
-  "NFT_ADDRESS": "",
-  "GOOGLE_MAPS_API_KEY": ""
+  "BASE_URL": "https://api.shyft.to",
+  "API_KEY": "Y1laRRrKCpxxuvVl",
+  "NETWORK": "devnet",
+  "NFT_ADDRESS": "5n4GKcTmZnwMM5BoF5BWrM3CmneP48hMSJrS3ywvNJmC",
+  "GOOGLE_MAPS_API_KEY": "AIzaSyA0B5Ca_C_EyjfB5MI5YAYDY-iv4S7JY0E"
 }
