--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -81,7 +81,7 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         manifestPlaceholders = [
-            MAPS_API_KEY : MAPS_API_KEY
+            GOOGLE_MAPS_API_KEY : GOOGLE_MAPS_API_KEY
         ]
     }
 
