--- a/mobile/ios/Flutter/devRelease.xcconfig
+++ b/mobile/ios/Flutter/devRelease.xcconfig
@@ -2,5 +2,5 @@
 
 FLUTTER_TARGET=lib/main_dev.dart
 ASSET_PREFIX=dev
-BUNDLE_NAME=BloodChain DEV
-BUNDLE_DISPLAY_NAME=BloodChain DEV
+BUNDLE_NAME=BloodBond DEV
+BUNDLE_DISPLAY_NAME=BloodBond DEV
