--- a/mobile/ios/Flutter/qaProfile.xcconfig
+++ b/mobile/ios/Flutter/qaProfile.xcconfig
@@ -2,5 +2,5 @@
 
 FLUTTER_TARGET=lib/main_qa.dart
 ASSET_PREFIX=qa
-BUNDLE_NAME=BloodChain QA
-BUNDLE_DISPLAY_NAME=BloodChain QA
+BUNDLE_NAME=BloodBond QA
+BUNDLE_DISPLAY_NAME=BloodBond QA
