--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nestjs-mongodb",
+  "name": "notification-service",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -18,7 +18,14 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migrate-mongo:create": "ts-node -- node_modules/migrate-mongo/bin/migrate-mongo create %name% -f migrate-mongo-config.ts",
+    "migrate-mongo:status": "ts-node -- node_modules/migrate-mongo/bin/migrate-mongo status -f migrate-mongo-config.ts",
+    "migrate-mongo:undo-last": "ts-node -- node_modules/migrate-mongo/bin/migrate-mongo down -f migrate-mongo-config.ts && npm run migrate-mongo:status",
+    "migrate-mongo": "ts-node -- node_modules/migrate-mongo/bin/migrate-mongo up -f migrate-mongo-config.ts",
+    "module:generate": "nest g module modules/%name%",
+    "controller:generate": "nest g controller modules/%name%",
+    "service:generate": "nest g service modules/%name%"
   },
   "dependencies": {
     "@nestjs/common": "^9.2.0",
@@ -37,8 +44,11 @@
     "argon2": "^0.31.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
     "logform": "^2.4.2",
+    "migrate-mongo": "^11.0.0",
+    "mongodb": "^6.1.0",
     "mongoose": "^7.6.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -51,6 +61,7 @@
     "@nestjs/schematics": "^9.0.3",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.3",
+    "@types/migrate-mongo": "^10.0.2",
     "@types/node": "^18.11.9",
     "@types/reflect-metadata": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
