--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.2.0",
     "@nestjs/jwt": "^9.0.0",
+    "@nestjs/microservices": "^9.2.0",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.4.3",
     "@nestjs/swagger": "^6.2.1",
