--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -32,6 +32,7 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.2.0",
     "@nestjs/jwt": "^9.0.0",
+    "@nestjs/microservices": "^9.2.0",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.4.3",
