--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -42,6 +42,8 @@
     "@sentry/tracing": "^7.61.0",
     "@types/lodash": "^4.14.195",
     "@types/multer": "^1.4.7",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.3",
     "argon2": "^0.31.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
