--- a/backend/package.json
+++ b/backend/package.json
@@ -52,6 +52,7 @@
     "lodash": "^4.17.21",
     "logform": "^2.4.2",
     "multer": "^1.4.5-lts.1",
+    "nestjs-i18n": "^10.3.7",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
