--- a/notification-service/docker-compose.yml
+++ b/notification-service/docker-compose.yml
@@ -29,3 +29,22 @@ services:
       - '8081:8081'
     networks:
       - notification-network
+
+  redis:
+    image: 'redis:7.2.1-alpine'
+    container_name: redis
+    ports:
+      - '6379:6379'
+    networks:
+      - notification-network
+
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    environment:
+      - REDIS_HOSTS=local:redis:6379
+    ports:
+      - '8088:8081'
+    depends_on:
+      - redis
+    networks:
+      - notification-network
