add bull dependency

--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -28,6 +28,7 @@
     "service:generate": "nest g service modules/%name%"
   },
   "dependencies": {
+    "@nestjs/bull": "^10.0.1",
     "@nestjs/common": "^9.2.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.2.0",
@@ -45,6 +46,7 @@
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.3",
     "argon2": "^0.31.1",
+    "bull": "^4.11.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.3.1",
