--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,19 @@
-FROM node:16
+FROM node:16 as development
 WORKDIR /usr/src/app
 COPY package*.json ./
-RUN npm install
+RUN npm ci
 COPY . .
 RUN npm run build
+
+FROM node:16 as production
+
+ARG NODE_ENV=production
+ENV NODE_ENV=${NODE_ENV}
+
+WORKDIR /usr/src/app
+COPY package*.json ./
+RUN npm ci --only=production
+COPY . .
+COPY --from=development /usr/src/app/dist ./dist
 EXPOSE 3000
-CMD ["npm", "run", "start:prod"]
+CMD ["node", "dist/main"]
